312		C++			Army and Navy tradition give leadership.
313		C++			Elections one month after game start.
314		C++			Landless nation removal option in configuration.txt.
315		C++			Cleaned up EU3Country a little.
316		C++			Tech Schools.
317		C++			Deleted a bunch of old files.
318		C++			Updated build.bat.
319		C++			Tech schools now come from V2 install.
323		C++			Added V2TechSchools.cpp and V2TechSchools.h
326		C++			Protect against crash.
330		C++			Log if source provinces have no destination.
331		C++			Manus now affect tech school.
332		C++			Merge nations does tech schools right.
333		C++			Block some tech schools.
334		C++			Allow culture_tech_school but make traditional_academic a hard default to beat.
335		C++			Max literacy is defined in configuration.txt.
336		C++			Remove log about estimated income.
337		C++			Non-culture pops have 10% literacy.
338		C++			Fixed typo with bureaucratic despotism reforms.
339		C++			Added Korea1821_01_02_ConverterMod0.5 save.
340		C++			Tab before "last_election" in output
341		C++			Social reforms no longer in a temp function (no functional change).
342		C++			Balance Upper House (and move out of a temp function).
344		C++			Make room in configuration file for V2 gametype.
354		C++			AHD now gets no_schools for all countries.
361		C++			Experimental support for EU3:IN.  Warn when attempting to use start dates that are too early.
367		C++			Support In Nomine-style three-part dates.
376		C++			Use the parser to grab province data instead of doing it manually.  Hopefully fixes AHD Baltimore.
378		C++			Get more localizations (including AHD ones).
379		C++			Automated test scripts now test against multiple config files.
380		C++			AHD unciv nations now get research points for reforms instead of techs.
381		C++			Document "EU3gametype = in" setting in configuration.txt.
383		C++			School reforms for AHD.
386		C++			Inca culture maps to Quechua, not Tarascan (the Tarascan people are from modern Mexico)