@@ -366,3 +366,5 @@ Revision	Version Updated		Log Message
 381		C++			Document "EU3gametype = in" setting in configuration.txt.
 383		C++			School reforms for AHD.
 386		C++			Inca culture maps to Quechua, not Tarascan (the Tarascan people are from modern Mexico)
+388		C++			Tiny mistake in readme fixed.
+390		C++			Unciv nations get reforms.
